# litvar-link

./: .dockerignore  .env.docker.example  .env.example  .env.npm.example  .gitignore  .loc-allowlist  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  Makefile  README.md  SECURITY.md  container-release.json  mcp_server.py  mcp_server_wrapper.py  pyproject.toml  server.py
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  conformance.yml  container-ci.yml  container-release.yml  container-security.yml  docker.yml  release.yml
docker/: .dockerignore  Dockerfile  README.md  __init__.py  docker-compose.dev.yml  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py
docs/: architecture.md  configuration.md  deployment.md  development.md  mcp-clients.md  rest-api.md
docs/superpowers/plans/: 2026-06-01-p0-foundations.md  2026-06-01-p1-governance-docs.md  2026-06-01-p2-cicd.md  2026-06-01-p3-refactor.md  2026-06-01-stack-modernization-plan.md  2026-07-16-litvar-runtime-hardening-plan.md
docs/superpowers/specs/: 2026-06-01-stack-modernization-design.md  2026-07-16-litvar-runtime-hardening-design.md
litvar_link/: __init__.py  app.py  cli.py  config.py  exceptions.py  logging_config.py  server_manager.py  validation.py
litvar_link/api/: __init__.py  client.py  error_handlers.py  parsing.py  rate_limiter.py  retry.py  url_guard.py
litvar_link/api/routes/: __init__.py  dependencies.py  genes.py  health.py  openapi_examples.py  publications.py  sensor.py  variants.py
litvar_link/cli_commands/: __init__.py  data.py  serve.py
litvar_link/mcp/: __init__.py  annotations.py  argument_errors.py  capabilities.py  envelope.py  errors.py  facade.py  notfound_guard.py  shaping.py
litvar_link/mcp/tools/: __init__.py  gene.py  literature.py  metadata.py  rsid.py  search.py  variant.py
litvar_link/models/: __init__.py  endpoint_specific.py  requests.py  responses.py  variants.py
litvar_link/services/: __init__.py  cache_hits.py  identifiers.py  significance.py  variant_service.py
litvar_link/utils/: __init__.py  caching.py
scripts/: check_file_size.py
tests/: __init__.py  conftest.py  test_cli.py  test_logging.py  test_server_manager.py
tests/conformance/: conftest.py  test_contract_truth_v1.py  test_http_policy_adapter.py
tests/fixtures/: __init__.py  api_responses.py  cli_help_snapshot.json  mcp_tool_snapshot.json  test_data.py
tests/integration/: test_live_litvar2.py
tests/test_api/: test_client.py  test_routes.py
tests/test_models/: test_real_api_data.py  test_requests.py  test_validation.py  test_variants.py
tests/test_services/: test_variant_service.py
tests/unit/: test_app_no_mcp.py  test_cache_hits.py  test_check_file_size.py  test_cli.py  test_cli_commands.py  test_config.py  test_cors_credentials.py  test_docker_compose_hardening.py  test_dockerfile_bootstrap.py  test_docs_reconciled.py  test_error_handlers.py  test_health_root.py  test_host_origin_guard.py  test_logging.py  test_logging_pii.py  test_mcp_capabilities.py  test_mcp_contract.py  test_mcp_facade.py  test_mcp_shaping.py  test_mcp_tool_parity.py  test_mcp_tools.py  test_openapi_examples.py  test_parsing.py  test_rate_limiter.py  test_readme_tools.py  test_response_envelope_v1.py  test_retry.py  test_server_manager.py  test_tool_names.py  test_validation.py  test_version_single_source.py
tests/unit/mcp/: test_audit_66_regressions.py  test_notfound_guard.py  test_tool_surface_budget.py  test_untrusted_content.py  test_untrusted_content_fencing.py
tests/unit/test_api/: test_client.py  test_routes.py  test_url_guard.py
tests/unit/test_models/: __init__.py  test_real_api_data.py  test_requests.py  test_variants.py
tests/unit/test_services/: test_variant_service.py
