[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litvar-link"
version = "3.0.1"
description = "High-performance MCP/API server for NCBI's LitVar2 genetic variant database"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "LitVar-Link Development Team", email = "dev@litvar-link.org"}
]
maintainers = [
    {name = "LitVar-Link Development Team", email = "dev@litvar-link.org"}
]
keywords = [
    "genetics", "variants", "bioinformatics", "api", "mcp", 
    "litvar2", "ncbi", "genomics", "publications", "research"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    # Web framework and API
    "fastapi>=0.138.0,<1.0.0",
    "uvicorn[standard]>=0.49.0,<1.0.0",
    "gunicorn>=26.0.0,<27.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    # HTTP client and networking
    "httpx>=0.27.0,<1.0.0",
    # MCP integration
    "mcp[cli]>=1.28.0,<2.0.0",
    "fastmcp>=0.2.0,<4.0.0",
    # Caching and performance
    "async-lru>=2.0.4,<3.0.0",
    # Logging, correlation, and monitoring
    "structlog>=26.1.0,<27.0.0",
    "asgi-correlation-id>=5.0.1,<6.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "orjson>=3.10.0,<4.0.0",
    # CLI interface
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0,<16.0.0",
    # Utilities
    "python-multipart>=0.0.9,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "pytest-cov>=4.0.0,<8.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "respx>=0.22.0,<1.0.0",
    "ruff>=0.15.20,<1.0.0",
    "mypy>=1.10.0,<3.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/litvar-link/litvar-link"
Documentation = "https://litvar-link.readthedocs.io"
Repository = "https://github.com/litvar-link/litvar-link"
"Bug Tracker" = "https://github.com/litvar-link/litvar-link/issues"
Changelog = "https://github.com/litvar-link/litvar-link/blob/main/CHANGELOG.md"

[project.scripts]
litvar-link = "litvar_link.cli:app"
litvar-link-mcp = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["litvar_link"]
include = ["server.py", "mcp_server.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "S", "T20", "SIM", "RUF",
    "C901",     # mccabe cyclomatic complexity (function-budget guard)
    "PLR0915",  # too-many-statements (function-budget guard)
]
ignore = ["S101", "E501"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T20", "C901", "PLR0915"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
show_column_numbers = true
pretty = true
exclude = [
    ".*site-packages.*",
    ".*/venv/.*",
    ".*/.venv/.*",
    "htmlcov/.*",
]

[[tool.mypy.overrides]]
module = [
    "uvicorn.*",
    "fastmcp.*",
    "mcp.*",
    "async_lru.*",
    "orjson.*",
    "structlog.*",
    "rich.*",
    "typer.*",
    "asgi_correlation_id.*",
    "prometheus_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "-ra",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["litvar_link"]
branch = true
omit = [
    "tests/*",
    "*/tests/*",
    "litvar_link/__main__.py",
]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
skip_empty = true
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"